--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "smithers-alias",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "An alias plugin for the Smithers Assistant",
   "main": "dist/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SmithersAssistant/Plugin-Alias-System.git"
+  },
+  "homepage": "https://github.com/SmithersAssistant/Plugin-Alias-System",
   "keywords": [
     "smithers",
     "assistant",
